# ros_package_manifest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
.github/workflows/: rust.yml
data/: package.xml
src/: lib.rs  main.rs  package.rs  tags.rs
src/package/: common.rs  error.rs  package1.rs  package2.rs
src/tags/: author.rs  dependency.rs  description.rs  export.rs  get_tag.rs  license.rs  maintainer.rs  package_name.rs  tag.rs  url.rs  version.rs
