[package]
name = "ros_package_rs"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde-xml-rs = "0.3.1"
validator = "0.8.0"
validator_derive = "0.8.0"
regex = "1"
lazy_static = "1.3.0"
roxmltree = "0.6.0"