[package]
name = "ros_package_manifest"
version = "0.3.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2018"
description = "This crate parses ROS package manifest (also known as package.xml)"
license = "ISC"
repository = "https://github.com/lelongg/ros_package_manifest"
homepage = "https://github.com/lelongg/ros_package_manifest"
documentation = "https://docs.rs/ros_package_manifest/"
readme = "README.md"
keywords = ["ros", "manifest", "package", "xml"]
categories = ["parser-implementations", "science::robotics"]

[dependencies]
regex = "1.12.1"
once_cell = "1.21.3"
roxmltree = "0.20.0"
thiserror = "2.0.12"
